--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ input{width:95%;margin:10px;padding:12px;font-size:16px}
 </header>
 
 <!-- DASHBOARD -->
+<h3>📅 Data Harian</h3>
 <input type="date" id="tgl" onchange="filterTanggal()">
 
 <div class="card">Omset<div class="big" id="omset">Rp 0</div></div>
@@ -37,6 +38,7 @@ input{width:95%;margin:10px;padding:12px;font-size:16px}
 <hr>
 
 <!-- PENCARIAN PRODUK -->
+<h3>🔎 Pencarian Produk</h3>
 <input id="cari" placeholder="Cari nama / kode barang..." onkeyup="filterProduk()">
 
 <div id="hasil"></div>
