--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@ input{width:95%;margin:10px;padding:12px;font-size:16px}
 
 .harga{color:red;font-weight:bold}
 .stok{color:green}
+h3{
+  text-align: center;
+  font-weight: bold;
+  margin-top: 15px;
+}
+
 </style>
 </head>
 
