--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ h3{
 <hr>
 
 <!-- PENCARIAN PRODUK -->
-<h3>🔎 Pencarian Produk</h3>
+<h3> 👉Tarik layar ke bawah untuk Refresh Halaman<br><br>🔎 Cari Produk</h3>
 <input id="cari" placeholder="Cari nama / kode barang..." onkeyup="filterProduk()">
 
 <div id="hasil"></div>
